--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "zendframework/zend-paginator":       "~2.3",
         "zendframework/zend-stdlib":          "~2.3",
         "zendframework/zend-mvc":             "~2.3",
-        "zendframework/zend-servicemanager":  "~2.3",
+        "zendframework/zend-servicemanager":  "~2.3 || ^3.0",
         "zendframework/zend-validator":       "~2.3"
     },
     "require-dev": {
